Fixes redirect on new secret

--- a/app/views/secrets/new.html.erb
+++ b/app/views/secrets/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Write a Secret!</h1>
 
-<form action="<%= new_user_secret_url %>" method="POST">
+<form action="<%= secrets_url %>" method="POST">
   <%= render "layouts/auth" %>
 
   <select name="secret[recipient_id]">
