--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,6 @@
 <h2>Secrets</h2>
 <ul>
   <% @user.received_secrets.each do |secret| %>
-    <li><%= secret.title %></li>
+    <li><%= secret.text %></li>
   <% end %>
 </ul>
