--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,7 @@
 <ul>
   <% @users.each do |user|  %>
     <li><%= link_to user.name, user %>
-      <%= render "friendships/form" , user: user %>
+      <%= render "friendships/form", user: current_user, friend: user %>
     </li>
   <% end  %>
 </ul>
