--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,20 @@
 <ul>
   <% @users.each do |user|  %>
     <li><%= link_to user.name, user %>
-      <%= render "friendships/form", user: current_user, friend: user %>
+      <%#= render "friendships/form", user: current_user, friend: user %>
+      <button class="friend" data-id="<%= user.id %>">Friend user</button>
     </li>
   <% end  %>
+
+  <script>
+    $('.friend').on('click', function(){
+      var id = $(this).attr('data-id');
+      alert("Clicked: "+id)
+      $.ajax({
+        url: ""+id+"/friendships",
+        type: "POST"
+      });
+    });
+  </script>
+
 </ul>
