Secret displays on users page on creation

--- a/app/views/secrets/new.html.erb
+++ b/app/views/secrets/new.html.erb
@@ -1,16 +1,3 @@
 <h1>Write a Secret!</h1>
 
-<form action="<%= secrets_url %>" method="POST">
-  <%= render "layouts/auth" %>
-
-  <select name="secret[recipient_id]">
-    <option value=""></option>
-    <% @users.each do |user| %>
-      <% next if user.id == current_user.id %>
-      <option value="<%= user.id  %>"><%= user.name %></option>
-    <% end %>
-  </select><br>
-
-  <textarea rows="5" cols="20" name="secret[text]"></textarea><br>
-  <input type="submit" value="Submit your secret">
-</form>
+<%= render 'secrets/form', users: @users, choose_user: true %>
