--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,32 @@
 <h1><%= @user.name %></h1>
 
 <h2>Secrets</h2>
-<ul>
+<ul class="secrets">
   <% @user.received_secrets.each do |secret| %>
     <li><%= secret.text %></li>
   <% end %>
 </ul>
+
+<%= render "secrets/form", choose_user: false, user: @user %>
+
+<script>
+  $('form').on('submit', function(event) {
+    event.preventDefault();
+
+    var form = $(this);
+    var textbox = $('#secret-box');
+
+    $.ajax({
+      type: 'POST',
+      url: '<%= secrets_url %>',
+      data: form.serialize(),
+      dataType: 'json',
+      success: function( response ){
+        newSecret = $('<li>'+ response.text +'</li>');
+        $('.secrets').append(newSecret);
+        textbox[0].value = '';
+        // console.log(response);
+      }
+    });
+  });
+</script>
