Adds 'add tag' link on secret form

--- a/app/views/secrets/_form.html.erb
+++ b/app/views/secrets/_form.html.erb
@@ -14,5 +14,50 @@
   <% end %>
 
   <textarea rows="5" cols="20" name="secret[text]" id="secret-box"></textarea><br>
+
+  <!-- <select name="secret[tag_ids][]">
+    <option value=""></option>
+    <%# tags.each do |tag| %>
+      <option value="<%#= tag.id %>"><%#= tag.text %></option>
+    <%# end%>
+  </select><br> -->
+
+    <div id="tags">
+
+    </div>
+
+  <%= link_to "Add another tag", '#', id: "add-tag" %><br>
+
+  <script type="application/json" id="bootstrapped-tags">
+    <%= tags.to_json.html_safe %>
+  </script>
+
+  <script type="text/template" id="tags_template">
+    <select name="secret[tag_ids][]">
+      <option value=""></option>
+      <%% _(tags).each(function(tag) { %>
+        <option value="<%%= tag.id %>"><%%= tag.text %></option>
+      <%% }); %>
+    </select><br>
+  </script>
+
+  <script type="application/javascript">
+    var addTagToForm = function() {
+      var templateCode = $('#tags_template').html();
+      var templateFn = _.template(templateCode);
+
+      var renderedContent = templateFn({
+        tags: JSON.parse($('#bootstrapped-tags').html())
+      });
+
+      var currentContent = $('<span>'+renderedContent+'</span>');
+      $('#tags').append(currentContent);
+    }
+
+    $('#add-tag').on('click', addTagToForm);
+
+  </script>
+
+
   <input type="submit" value="Submit your secret">
 </form>
