--- a/app/views/secrets/new.html.erb
+++ b/app/views/secrets/new.html.erb
@@ -1,3 +1,3 @@
 <h1>Write a Secret!</h1>
 
-<%= render 'secrets/form', users: @users, choose_user: true %>
+<%= render 'secrets/form', users: @users, choose_user: true, tags: @tags %>
