--- a/app/views/secrets/_form.html.erb
+++ b/app/views/secrets/_form.html.erb
@@ -15,13 +15,6 @@
 
   <textarea rows="5" cols="20" name="secret[text]" id="secret-box"></textarea><br>
 
-  <!-- <select name="secret[tag_ids][]">
-    <option value=""></option>
-    <%# tags.each do |tag| %>
-      <option value="<%#= tag.id %>"><%#= tag.text %></option>
-    <%# end%>
-  </select><br> -->
-
     <div id="tags">
 
     </div>
@@ -33,7 +26,7 @@
   </script>
 
   <script type="text/template" id="tags_template">
-    <select name="secret[tag_ids][]">
+    <select class="tag-select" name="secret[tag_ids][]">
       <option value=""></option>
       <%% _(tags).each(function(tag) { %>
         <option value="<%%= tag.id %>"><%%= tag.text %></option>
