--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,8 +2,12 @@
 
 <h2>Secrets</h2>
 <ul class="secrets">
-  <% @user.received_secrets.each do |secret| %>
+  <% @received_secrets.each do |secret| %>
     <li><%= secret.text %></li>
+    <ul><% secret.tags.each do |tag| %>
+        <li><%= tag.text %></li>
+      <% end %>
+    </ul>
   <% end %>
 </ul>
 
