--- a/app/views/secrets/_form.html.erb
+++ b/app/views/secrets/_form.html.erb
@@ -15,39 +15,37 @@
 
   <textarea rows="5" cols="20" name="secret[text]" id="secret-box"></textarea><br>
 
-    <div id="tags">
+  <div id="selected-tags">
+  </div>
 
-    </div>
-
-  <%= link_to "Add another tag", '#', id: "add-tag" %><br>
+  <div id="tags">
+    <select id="tag-select">
+      <option value=""></option>
+      <% tags.each do |tag| %>
+        <option value="<%= tag.id %>"><%= tag.text %></option>
+      <% end %>
+    </select>
+  </div>
 
   <script type="application/json" id="bootstrapped-tags">
     <%= tags.to_json.html_safe %>
   </script>
 
-  <script type="text/template" id="tags_template">
-    <select class="tag-select" name="secret[tag_ids][]">
-      <option value=""></option>
-      <%% _(tags).each(function(tag) { %>
-        <option value="<%%= tag.id %>"><%%= tag.text %></option>
-      <%% }); %>
-    </select><br>
-  </script>
-
   <script type="application/javascript">
+
     var addTagToForm = function() {
-      var templateCode = $('#tags_template').html();
-      var templateFn = _.template(templateCode);
+      var tag = $('#tag-select option:selected');
+      var tagName = tag.html();
+      var tagID = tag.attr('value');
 
-      var renderedContent = templateFn({
-        tags: JSON.parse($('#bootstrapped-tags').html())
-      });
+      label = $('<label>'+tagName+'<br></label>')
+      label.append($('<input type=hidden name=secret[tag_ids][]                                 value='+tagID+'>'))
 
-      var currentContent = $('<span>'+renderedContent+'</span>');
-      $('#tags').append(currentContent);
-    }
+      $('#selected-tags').append(label);
+      console.log(printTag);
+    };
 
-    $('#add-tag').on('click', addTagToForm);
+    $('#tag-select').on('change', addTagToForm);
 
   </script>
 
