Fixes bugs in submit
Prevents tag duplicates, clears tag labels after submission.

--- a/app/views/secrets/_form.html.erb
+++ b/app/views/secrets/_form.html.erb
@@ -39,10 +39,9 @@
       var tagID = tag.attr('value');
 
       label = $('<label>'+tagName+'<br></label>')
-      label.append($('<input type=hidden name=secret[tag_ids][]                                 value='+tagID+'>'))
+      label.append($('<input type=hidden name=tag_ids[]                                 value='+tagID+'>'))
 
       $('#selected-tags').append(label);
-      console.log(printTag);
     };
 
     $('#tag-select').on('change', addTagToForm);
